# leaf

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  create_table.sql  docker-compose.yml  migrate_table.sql  package-lock.json  package.json  post.json  svelte.config.js  tailwind.config.js  test.hurl
client/: .env.development  .env.production  .eslintrc.yml  .gitignore  Dockerfile  _middleware.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  trace-to-tree.mjs  tsconfig.json
client/components/: ArticleElement.tsx  Footer.tsx  Header.tsx  LinkButton.tsx  Login.tsx  Main.tsx  PageInfo.tsx  Pagination.tsx  Tags.tsx
client/context/: ColorMode.ts  isProtected.ts
client/hooks/: useBottomEffect.ts  useReloadEffect.ts
client/pages/: _app.tsx  _document.tsx  index.tsx  login.tsx  sample.html
client/pages/api/: add_tag.ts  articles.ts  create.ts  create_all.ts  delete.ts  delete_tag.ts  download.ts  health.ts  migrate.ts  reload.ts  reload_archived.ts  reload_liked.ts  save_pos.ts  search.ts  toggle_archived.ts  toggle_liked.ts
client/pages/api/articles/: [id].ts  archived.ts  liked.ts
client/pages/archived/: index.tsx
client/pages/articles/: [id].tsx
client/pages/liked/: index.tsx
client/pages/search/: index.tsx
client/pages/tags/: [name].tsx  [tag_name].tsx
client/public/: manifest.json
client/styles/: globals.css
client/types/: types.ts
components/: ArticleElement.tsx  Header.tsx
context/: ColorMode.ts
extension/: Makefile  background.js  manifest.json  options.html  options.js
extension/chrome/: Makefile  background.js  manifest.json  options.js
extension/firefox/: Makefile  options.js
frontend/: index.html  package.json
frontend/src/: App.module.css  App.tsx  Article.tsx  Header.tsx  Lists.tsx  Reading.tsx  Search.tsx  Tag.tsx  Types.tsx  index.css  index.tsx  utils.tsx
import/: .gitignore  Cargo.toml
import/src/: main.rs
nextjs/: package-lock.json  package.json
nextjs/components/: Header.tsx
nextjs/contexts/: atoms.tsx
nextjs/pages/: _app.tsx  index.tsx
nextjs/pages/articles/: [id].tsx
nextjs/types/: Types.tsx
pages/: _app.tsx  index.tsx
pages/api/: create.ts
pages/archived/: index.tsx
pages/articles/: [id].tsx
pages/liked/: index.tsx
pages/search/: index.tsx
prisma/: schema.prisma
react/: package-lock.json  package.json
react/src/: App.tsx  Header.tsx  List.tsx  index.css
react/src/contexts/: atoms.tsx
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
server/src/: core.rs  error.rs  handler.rs  index.rs  main.rs  readable.rs  schema.rs  scrape.rs  statements.rs  store.rs  types.rs
server/tests/: 001_expected.html  001_source.html  002_expected.html  002_source.html  003_expected.html  003_source.html  004_expected.html  004_source.html  004_source_short.html  005_expected.html  005_source.html  006_expected.html  006_source.html
src/: app.css  app.html  core.rs  error.rs  errors.rs  handler.rs  hooks.server.ts  main.rs  readble.rs  schema.rs  statements.rs  template.rs  types.rs
src/lib/: ArticleCard.svelte  Breadcrumb.svelte  Buttons.svelte  Header.svelte  HeaderButtons.svelte  LinkButton.svelte  Nav.svelte  Spinner.svelte  Tags.svelte  logger.js  toast.ts  types.ts
src/lib/buttons/: ArchiveBox.svelte  ArchiveBoxFilled.svelte  Heart.svelte  HeartFilled.svelte  Trash.svelte  const.ts
src/lib/server/: client.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/archived/: +page.server.ts  +page.svelte
src/routes/liked/: +page.server.ts  +page.svelte
src/routes/search/: +page.server.ts  +page.svelte
src/routes/tags/: +page.server.ts  +page.svelte
static/: index.js  load.js  main.css  scroll.js  utils.js
styles/: theme.ts
sveltekit/: package-lock.json  package.json
templates/: article.html  base.html  base_article.html  index.html
types/: types.ts
(+14 files in other folders)
