[package]
name = "leaf-server"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = {version = "0.6", features = ["macros", "json"]}
hyper = "0.14.23"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
sqlite = "0.30.3"
ulid = "1.0.0"
tower-http = { version = "0.3.5", features = ["fs", "cors"]}
tantivy = "0.19.0"
ammonia = "3.3.0"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
unicode-width = "0.1.10"
nipper = {git = "https://github.com/kyoheiu/nipper"}
lazy_static = "1.4.0"
regex = "1.7.2"
html5ever = "0.26.0"
headless_chrome = "1.0.5"
anyhow = "1.0.70"

