[package]
name = "leaf-server"
version = "0.6.3"
edition = "2021"

[dependencies]
axum = {version = "0.6", features = ["macros", "json"]}
hyper = "0.14.27"
serde = {version = "1.0.181", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
sqlite = "0.31.0"
ulid = "1.0.0"
tower-http = { version = "0.4.3", features = ["fs", "cors"]}
tantivy = "0.19.2"
ammonia = "3.3.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
unicode-width = "0.1.10"
anyhow = "1.0.72"
tempfile = "3.7.0"
colored = "2.0.4"
regex = "1.9.4"
